# Super-8-Camera

./: .gitignore  Makefile  NEXT_STEPS.md  README.md  VERIFY_INTERFERENCE.py  bom_optimizer.py  build.py  build_checklist.py  camera_body.py  camera_body.step  camera_body.stl  encoder_test.py  film_gate.py  film_gate.step  film_gate.stl  generate_schematic.py  integrate_shell.py  main.c  metering.c  metering.h  motor_control.c  motor_control.h  platformio.ini  pyproject.toml  shutter_disc.py  shutter_disc.step  shutter_disc.stl  super8_battery_life.py  super8_camera.kicad_sch  super8_camera.net  super8_camera_bom.csv  super8_claw_mechanism.py  super8_drivetrain.py  super8_exposure.py  transport_sim.py  verify_fixes.py  verify_shell_fit.py
super8cam/: __init__.py  build.py  requirements.txt
super8cam/analysis/: kinematics.py  layout_diagnostic.py  thermal.py  timing_validation.py  tolerance_stackup.py
super8cam/assemblies/: __init__.py  drivetrain.py  electronics.py  film_path.py  film_transport.py  full_camera.py  optical_path.py  power_system.py  shutter_assembly.py
super8cam/business/: store_catalog.py
super8cam/firmware/: README.md  platformio.ini
super8cam/manufacturing/: gdt_standards.py  generate_bom.py  generate_checklist.py  generate_drawings.py  generate_qr.py  generate_wiring.py  repair_guide.py
super8cam/parts/: __init__.py  battery_door.py  body_left.py  body_right.py  bottom_plate.py  cam_follower.py  cartridge_door.py  cartridge_receiver.py  (+16 more)
webapp/: generate_data.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+36 files in other folders)
