[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super8cam"
version = "0.1.0"
description = "An open-source, self-repairable Super 8 film camera"
readme = "README.md"
license = {text = "CERN-OHL-S-2.0"}
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "reportlab>=4.0",
]

[project.scripts]
super8cam-build = "super8cam.build:main"

[tool.setuptools.packages.find]
include = ["super8cam*"]
